@@ -1,12 +1,21 @@
 <states>
   <stateinfo name="initial state">
-    <widget type="label" x="10" y="10" w="200" h="30" data="Initial State" />
-    <widget type="panel" x="50" y="10" w="200" h="200" bgtype="Bitmap" bgbitmap="dimelogo_small2.png" bgalign="CENTER"/>
+    <layout>
+      <label x="10" y="10" w="200" h="30" data="Initial State" />
+      <panel x="50" y="10" w="200" h="200" bg="logo" />
+    </layout>
+    <renderers>
+      <bitmap name="logo" src="dimelogo_small2.png" align="CENTER" />
+    </renderers>
   </stateinfo>
   <stateinfo name="OOG View">
-    <widget type="label" x="10" y="10" w="200" h="30" data="OOG View" />
+    <layout>
+      <label x="10" y="10" w="200" h="30" data="OOG View" />
+    </layout>
   </stateinfo>
   <stateinfo name="OGRE View">
-    <widget type="label" x="10" y="10" w="200" h="30" data="OGRE View" />
+    <layout>
+      <label x="10" y="10" w="200" h="30" data="OGRE View" />
+    </layout>
   </stateinfo>
 </states>
